# soda-spark

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HOWTORELEASE.md  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml  workflow.yml
scripts/: release.py
soda_spark/: example.py
src/sodaspark/: __init__.py  scan.py  version.py
static/: demodata.yml
tests/: test_example.py  test_scan.py
tests/data/: departments.csv  employees.csv  scan_data_frame.yml
