[metadata]
name = soda-spark
description = Soda SQL API for PySpark data frame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sodadata/soda-spark
author = Cor Zuurmond
maintainer = Cor Zuurmond
maintainer_email = corzuurmond@godatadriven.com
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = Data quality, Spark, Soda
project_urls =
    Source=https://github.com/sodadata/soda-spark
    Tracker=https://github.com/sodadata/soda-spark/issues

[options]
packages = find:
package_dir = =src
install_requires =
    soda-sql-spark==2.1.0b17
    pyspark>=3.0.0,<4.0.0
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pre-commit>=2.14.1
    pytest>=6.2.5
    pytest-spark>=0.6.0
    pytest-cov>=2.12.1

[tool:pytest]
addopts = --cov=src
          --cov-report=xml:pytest-coverage.xml
          --junitxml=pytest-output.xml
          --doctest-glob="README.md"
          --doctest-modules
          --ignore=scripts/
spark_options =
    spark.app.name: soda-spark
    spark.executor.instances: 1
    spark.sql.catalogImplementation: in-memory
