[metadata]
name = soda-spark
description = Soda SQL API for PySpark data frame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sodadata/soda-spark
author = Cor Zuurmond
maintainer = Cor Zuurmond
maintainer_email = corzuurmond@godatadriven.com
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = Data quality, Spark, Soda
project_urls =
    Source=https://github.com/sodadata/soda-spark
    Tracker=https://github.com/sodadata/soda-spark/issues

[options]
packages = find:
package_dir = =src
install_requires =
    soda-sql-spark~=2.1.9
    pyspark~=3.0
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pre-commit>=2.14.1
    pytest>=6.2.5
    pytest-spark>=0.6.0
    pytest-cov>=2.12.1

[flake8]
ignore = E226,E302,E41,W504,W503
max-line-length = 120
exclude = venv\,direnv\

[mypy]
python_version = 3.9
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True

[tool:pytest]
addopts = --cov=src
          --cov-report=xml:pytest-coverage.xml
          --junitxml=pytest-output.xml
          --doctest-glob="README.md"
          --doctest-modules
          --ignore=scripts/
spark_options =
    spark.app.name: soda-spark
    spark.executor.instances: 1
    spark.sql.catalogImplementation: in-memory

[tox:tox]
envlist = py37,
          py38,
          py39,
isolated_build = true
skip_missing_interpreters = true

[testenv]
description = run the tests with pytest under {basepython}
setenv =
    PIP_DISABLE_PIP_VERSION_CHECK = 1
    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
    {py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
passenv =
    PYTEST_*
    PIP_CACHE_DIR
deps =
    pip >= 19.3.1
extras = testing
commands = pytest {posargs:.}
